report model errors

--- a/src/confirm.html
+++ b/src/confirm.html
@@ -13,7 +13,7 @@
 <body>
   <div class="flex-col content-box" style="padding-top: 0">
 
-    <img src="imgs/account.jpg" alt="account" style="margin-bottom: -40px">
+    <img src="imgs/account.jpg" alt="account" style="margin: -20px auto -40px auto; width: 350px">
 
     <div class="header-1">
       Are you sure?
