--- a/src/how-to/e-waste.html
+++ b/src/how-to/e-waste.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Home</title>
-  <link href="../css/home-page.css" rel="stylesheet" type="text/css" />
-  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+  <link href="/css/home-page.css" rel="stylesheet" type="text/css" />
   <link rel="manifest" href="./manifest.json">
+  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 
 
@@ -24,14 +24,104 @@
     <img src="../imgs/batteries-real.jpg">
 
     <div class="title-1" style="margin-bottom: 15px;"> What to do with: E-Waste </div> <br>
-    <div class="regular-text" style="margin-bottom: 30px;"> All e-waste containing batteries (especially lithium batteries) cannot be disposed of in a normal recycling bin! This is because electronics and fluorescent lights need special disposal to handle the heavy metals and chemicals inside. They can be dropped off at special locations or events, or household hazardous waste collection points across the US. Find a local one here: </div>
-  
-    <a class="regular-text" href="https://search.earth911.com/?what=household+hazardous+waste">
-    Household Hazardous Waste Collection Points
-  </a>
-    
 
-  </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> All e-waste containing batteries (especially lithium
+      batteries) cannot be disposed of in a normal recycling bin! This is because electronics and fluorescent lights
+      need special disposal to handle the heavy metals and chemicals inside. They can be dropped off at special
+      locations or events, or household hazardous waste collection points across the US. Find a local one here:
+
+      <a href="https://search.earth911.com/?what=household+hazardous+waste">
+        Household Hazardous Waste Collection Points
+      </a>
+
+    </div>
+
+    <div class="title-1" style="margin-bottom: 15px;"> Specifics of E-Waste </div> <br>
+
+<!-- Batteries -->
+    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Batteries </div>
+    <div class="regular-text"> Like we mentioned earlier, batteries cannot simply be tossed in the trash. Instead,
+    </div>
+    <ol class="regular-text" style="margin-bottom: 30px;">
+      <li>
+        Try to go to a local recycling center or hazardous waste collection point (linked above).
+      </li>
+      <li>
+        Try to see if your batter manufacturer (duracell, energizer, etc.) has a collection point near you! They are
+        found all throughout the US.
+      </li>
+      <li>
+        For rechargeable batteries, consider investing in a rechargeable battery charger to reduce the number of
+        disposable batteries used. Please ensure your battery charger fits your battery type.
+      </li>
+    </ol>
+
+<!-- Wires and Cables -->
+    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Wires and Cables </div>
+    <div class="regular-text"> Cables and wires are very easy to dispose of. Your options are to:
+    </div>
+    <ol class="regular-text" style="margin-bottom: 30px;">
+      <li>
+        Recycle through electronics recycling programs and e-waste recycling facilities. (linked above)
+      </li>
+      <li>
+        Reuse or repurpose the wires throughout your house
+      </li>
+      <li>
+        Take a trip to your local best buy or electronics store. They accept most non-hazardous cables
+      </li>
+    </ol>
+
+<!-- Devices -->
+    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Devices (smartphones,
+      tablets, etc.) </div>
+    <div class="regular-text"> There are many options when it comes to disposing of your personal devices. Before
+      anything, ensure you clear all data and log out of all accounts on your device, no matter what. From there, you
+      can
+    </div>
+    <ol class="regular-text" style="margin-bottom: 30px;">
+      <li>
+        Sell or donate the device if in working condition. Gamestop, Best buy, and Goodwill are some great places to
+        start
+      </li>
+      <li>
+        Recycle non-functional or obsolete devices through manufacturer programs or e-waste recycling centers.
+      </li>
+    </ol>
+
+<!-- Printers and Scanners -->
+    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Printers and Scanners </div>
+    <div class="regular-text"> Printers and Scanners may seem difficult to recycle due to their size and complexity, but
+      your options are simple!
+    </div>
+    <ol class="regular-text" style="margin-bottom: 30px;">
+      <li>
+        If in working condition, try to sell or donate the device. Gamestop, Best buy, and Goodwill are some great
+        places to start
+      </li>
+      <li>
+        Otherwise, recycle non-functional devices through designated recycling centers.
+      </li>
+      <li>
+        If neither of the above are available, contact the manufacturer of the printer and see if they are accepting
+        rebates or accepting models of that printer/scanner to be sent to facilities.
+      </li>
+    </ol>
+
+<!-- TVs and Monitors -->
+    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> TVs and Monitors </div>
+    <div class="regular-text"> LCD and CRT screens are different from regular devices, but the options remain similar.
+      If possible, please consider
+    </div>
+    <ol class="regular-text" style="margin-bottom: 30px;">
+      <li>
+        Selling or donating the device if in working condition. Gamestop, Best buy, and Goodwill are some great places
+        to start.
+      </li>
+      <li>
+        If not in working condition, look for e-waste collection events or facilities that accept them (linked above)
+      </li>
+    </ol>
 
 </body>
 
