quick infinite load time bug fix

--- a/src/confirm.html
+++ b/src/confirm.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <a class="flex-row create-button" href="./no-account.html">
+    <a class="flex-row create-button" href="./scan.html">
       <div class="create-button-text">
         Yes, continue to app
       </div>
