--- a/src/scan.html
+++ b/src/scan.html
@@ -93,6 +93,33 @@
         line-height: normal;
       }
 
+      .progbar {
+        height: 20px;
+      }
+
+      .loader-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        margin: auto;
+      }
+
+      .loader {
+        width: 40px;
+        height: 40px;
+        border: 4px solid transparent;
+        border-top: 4px solid black;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
+
 
 </style>
 </head>
@@ -100,12 +127,20 @@
 <body>
 
 
-  <iconify-icon id="loading-circle" icon="line-md:loading-twotone-loop" width="50" height="50" class="loading-icon" style="z-index:1"></iconify-icon>
-  <div class="loading-icon" style="top:60%; margin-left:-50px" id="loading-text">
-    <div class="light-text">
+    <div class="flex-col chall-col" style="position: fixed; top: 40%; left: 18%;" id="load-div">
+      <div class="progbar progbar-back">
+        <div class="progbar progbar-fill" style="width: 0%;" id="model-load-bar"></div>
+      </div>
+    </div>
+
+  
+  <div class="loading-icon" style="top:40%; left: 38.5%" id="loading-text">
+    <div class="light-text" style="font-size:14pt">
       Loading model...
     </div>
   </div>
+  
+
 
   <video id="webcam" autoPlay playsInline muted></video>
   <canvas id="canvas" style="display: none;"></canvas>
@@ -178,8 +213,10 @@
 
   <div id="lobe-popup" class="flex-col popup-box pub-id-box">
 
-    <iconify-icon id="lobe-loader" icon="line-md:loading-twotone-loop" width="40" height="40" style="z-index:2; color:black; margin:auto"></iconify-icon>
-
+    <div class="loader-container" id="lobe-loader">
+      <div class="loader"></div>
+    </div>
+    
 
     <div id="lobe-content" style="display:none">
       <div class="flex-row" style="margin-left: 45px;">
