implementing feedback from Jordan and Lisa

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,17 @@
   <link href="./css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="./manifest.json">
+  <style>
+    .instructions-text {
+      color: #787878;
+      font-family: Roboto;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      margin: auto;
+    }
+  </style>
 </head>
 
 <body>
@@ -76,6 +87,25 @@
         </div>
       </div>
 
+      <div id="instructions", style="display: none">
+        <div class="heading-1">
+          Not sure where to start?
+        </div>
+  
+        <div class="flex-row shadow-box chall-box">
+          <div class="flex-col chall-img-box">
+            <img alt="Plastic bottle" style="height: 89px;" src="imgs/camera-icon.jpg">
+          </div>
+  
+          <div class="flex-col chall-col">
+            <p class="instructions-text chall-text">
+              Scan your first item by pressing the green circle below.
+            </p>
+          </div>
+        </div>
+      </div>
+
+
       <div class="heading-1">
         Weekly challenges
       </div>
@@ -94,7 +124,7 @@
           </div>
         </div>
         <div class="flex-col chall-img-box">
-          <img alt="Plastic bottle" style="height: 89px;" id="challenge-1-img" src="./imgs/plastic.png">
+          <img alt="Plastic bottle" style="height: 89px;" id="challenge-1-img">
         </div>
       </div>
 
@@ -112,7 +142,7 @@
           </div>
         </div>
         <div class="flex-col chall-img-box">
-          <img alt="Cardboard box" style="height: 74px;" id="challenge-2-img" src="./imgs/cardboard.png">
+          <img alt="Cardboard box" style="height: 74px;" id="challenge-2-img">
         </div>
       </div>
 
