--- a/src/scan.html
+++ b/src/scan.html
@@ -194,7 +194,7 @@
       <div id="load-prev" class="flex-row pub-btn pub-id-btn">
         <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
         <div class="light-text pub-btn-text">
-          Back
+          Home
         </div>
       </div>
       <div id="load-next" class="flex-row pub-btn pub-id-btn">
@@ -244,7 +244,7 @@
         <a class="flex-row pub-btn pub-id-btn" href="./index.html">
           <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
           <div class="light-text pub-btn-text">
-            Back
+            Home
           </div>
         </a>
         <a class="flex-row pub-btn pub-id-btn" href="./scan.html">
@@ -285,7 +285,7 @@
         <a class="flex-row pub-btn pub-id-btn" href="./index.html">
           <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
           <div class="light-text pub-btn-text">
-            Back
+            Home
           </div>
         </a>
         <a class="flex-row pub-btn pub-id-btn" href="./scan.html">
@@ -313,7 +313,7 @@
       <a href="./index.html" class="flex-row pub-btn" id="popup-return" style="margin-left:30px">
         <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
         <div class="light-text pub-btn-text">
-          Back
+          Home
         </div>
       </a>
     </div>
@@ -334,7 +334,7 @@
       <a class="flex-row pub-btn pub-id-btn" href="./index.html">
         <img src="/imgs/arrow.png" style="height: 15px; rotate: 180deg;">
         <div class="light-text pub-btn-text">
-          Back
+          Home
         </div>
       </a>
       <a class="flex-row pub-btn pub-id-btn" href="./scan.html">
