--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,39 @@
       line-height: normal;
       margin: auto;
     }
+
+    .loader-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        margin: auto;
+    }
+
+    .loader {
+      width: 40px;
+      height: 40px;
+      border: 4px solid transparent;
+      border-top: 4px solid #74B9BA;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 
 <body>
 
-  <iconify-icon id="loading-circle" icon="line-md:loading-twotone-loop" width="50" height="50" class="loading-icon" style="z-index:2"></iconify-icon>
+  <div class="loader-container" id="page-loader">
+    <div class="loader"></div>
+  </div>
   
-  <div id="content" class="blur-effect">
+  
+  <div id="content" style="display:none">
 
     <div class="flex-row tib-box">
       <button>
@@ -31,8 +56,6 @@
         </a>
       </button>
     </div>
-
-    
 
     <div class="flex-col content-box">
 
