update howto pages

--- a/src/how-to/metal.html
+++ b/src/how-to/metal.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home</title>
+  <title>Metal</title>
   <link href="/css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="./manifest.json">
@@ -21,22 +21,42 @@
       </div>
     </a>
 
-    <img src="/imgs/metal-real.jpg">
-
-    <div class="title-1" style="margin-bottom: 15px;"> What to do with: Metal </div> <br>
-    <div class="regular-text" style="margin-bottom: 30px;"> Metal is often something you instinctively put in the recycle whole, but sometimes have special rules! Check below before proceeding. </div>
+    <div class="title-1" style="margin-bottom: 15px; margin-top: 15px"> What to do with: Metal </div> <br>
+    <div class="regular-text" style="margin-bottom: 30px;"> For the most part, metal can be recycled, but there some
+      exceptions where it should be in the garbage. The following guidelines apply to the City of Kirkland and should
+      apply broadly to other cities as well: </div>
 
     <div class="flex-col ss-img-box">
-      <img src="/imgs/metal-cans.jpg" style="height: 150px">
+      <img src="../imgs/metal-cans.jpeg" style="width:60%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Metal Cans </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Alluminum and Tin cans are perfectly recycleable, but if they do not contain a metal lid larger than 3’, make sure to not include the lid (this does not apply to the can or tin openers on most bottles, should those fall off). </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Aluminum and tin cans are recyclable, but only recycle metal
+      lids that are larger than three inches.
+    </div>
 
     <div class="flex-col ss-img-box">
-      <img src="/imgs/scrap-metal.jpg" style="height: 150px">
+      <img src="../imgs/scrap-metal.jpg" style="width:40%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Scrap Metal </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Scrap metal needs to fit specific dimensions in order to be recycled. Scrap metal put in your blue recycling bin should be at least 3’ in one direction, but no longer than 2 feet. If your metal is too large, find a local scrap mill or US designated transfer station for the metal. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Scrap metal needs to fit specific dimensions to be recycled.
+      Scrap metal put in your blue recycling bin should be larger than three inches, but no longer than 2 feet. If your
+      metal is too large, find a local scrap mill or US designated transfer station for the metal. For more specific
+      guidelines, see the following page:
+
+      <a
+        href="https://www.kirklandwa.gov/Government/Departments/Public-Works-Department/Solid-Waste-Services/Recycle/Beyond-the-Cart/Appliances-and-Scrap-Metal">
+        Metal Guidelines
+      </a>
+
+    </div>
+
+    <div class="flex-col ss-img-box">
+      <img src="../imgs/pie-tray.jpg" style="width:40%">
+    </div>
+    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Foil and pie trays </div>
+    <div class="regular-text" style="margin-bottom: 30px;">Tin foil / aluminum foil and pie trays are NOT recyclable in
+      Kirkland, although they are recyclable in some larger cities like Seattle, so be sure to check local guidelines.
+    </div>
 
 
 
