--- a/src/how-to/plastic.html
+++ b/src/how-to/plastic.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home</title>
-  <link href="/css/home-page.css" rel="stylesheet" type="text/css" />
-  <link rel="manifest" href="./manifest.json">
+  <title>Plastic</title>
+  <link href="../css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+  <link rel="manifest" href="./manifest.json">
 </head>
 
 
@@ -21,24 +21,29 @@
       </div>
     </a>
 
-    <img src="../imgs/plastic-real.png">
+    <div class="title-1" style="margin-bottom: 15px; margin-top: 15px;"> What to do with: Plastic </div> <br>
+    <div class="regular-text" style="margin-bottom: 15px;">
+      Plastic is very often a tricky thing to recycle. The most important thing to remember is that the recycling symbol
+      does not always mean you can recycle it in your cart. Guidelines for that can be found here:
 
-    <div class="title-1" style="margin-bottom: 15px;"> What to do with: Plastic </div> <br>
-    <div class="regular-text" style="margin-bottom: 30px;"> Plastic is very often a tricky thing to recycle. The most
-      important thing to remember is that the recycling symbol does not always mean you can recycle it in your cart.
-      Guidelines for that can be found below. </div>
+      <a href="https://www.acmeplastics.com/content/your-guide-to-plastic-recycling-symbols/">
+        https://www.acmeplastics.com/content/your-guide-to-plastic-recycling-symbols/.
+      </a>
+
+    </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> In short, #1 (PETE) or #2 (HDPE) are the most recycled plastics and accepted everywhere. Plastics #3 , #4, #5, #6
+      and #7 are usually not acceptable at recycling plants. The number is shown in recycling triangle. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> For the city of Kirkland specifically, the following applies: </div>
 
     <div class="flex-col ss-img-box">
-      <img src="../imgs/plastic-bottles.png" style="height: 150px">
+      <img src="/imgs/plastic-bottles.png" style="width:30%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Bottles and Jugs </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Ensure that any plastic bottles do not contain substantial
-      residue from it’s contents, and then recycle the bottle IF it fits the guidelines linked above. Make sure to screw
-      the cap back on unless the cap is loose and will not fit tightly on the container, in which case it must be put in
-      the trash. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Ensure that the item does not contain substantial residue
+      from its contents, and then recycle the bottle. Make sure to screw the cap back on before recycling. </div>
 
     <div class="flex-col ss-img-box">
-      <img src="../imgs/plastic-container.png" style="height: 150px">
+      <img src="/imgs/plastic-container.png" style="width: 30%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Tubs (Yogurt or Dairy) </div>
     <div class="regular-text" style="margin-bottom: 30px;"> Plastic tubs follow a similar protocol as bottles and jugs,
@@ -47,13 +52,32 @@
 
 
     <div class="flex-col ss-img-box">
-      <img src="../imgs/plastic-cups.png" style="height: 150px">
+      <img src="/imgs/plastic-cups.png" style="width: 30%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Cups </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Plastic cups are recyclable. If they contain lids, ensure
-      that the lid follows the guidelines linked above. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Plastic cups are recyclable. </div>
 
-      
+
+    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Miscellaneous soft plastics, food
+      serviceware, and wrappers </div>
+    <div class="regular-text" style="margin-bottom: 15px;"> Wrappers, chip bags, takeout bags, plastic utensils, straws,
+      and hygiene items (tissues, protective gloves, face masks) are NOT recyclable, and should be put in the garbage.
+    </div>
+    <div class="regular-text" style="margin-bottom: 15px;"> Dirty items containing food or liquid, dirty paper, and
+      plastic trays/clamshells are also not recyclable. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Please note that you don’t need to scrub with soap and
+      water! Just a rinse is usually enough to have your plastics accepted at a recycling plant. </div>
+
+
+    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Outside Kirkland? </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> If you live in a city other than Kirkland, the recycling
+      guidelines should stay similar with only slight variations. For the most part, bigger cities have more recycling
+      capabilities. Check with the guidelines linked above if you are confused. </div>
+
+
+
+
+
   </div>
 
 </body>
