--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home</title>
+  <title>RecycleScan</title>
   <link href="./css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
   <link rel="manifest" href="./manifest.json">
@@ -216,6 +216,18 @@
           </div>
           <div class="light-text ss-text">
             Simple, but with some exceptions
+          </div>
+        </a>
+
+        <a class="flex-col shadow-box semi-sq" href="./how-to/glass.html">
+          <div class="flex-col ss-img-box">
+            <img src="../imgs/glass-graphic.png" alt="Glass Pane" style="height: 79px;">
+          </div>
+          <div class="regular-text ss-text">
+            Glass
+          </div>
+          <div class="light-text ss-text">
+            Quick and easy
           </div>
         </a>
   
