--- a/src/error.html
+++ b/src/error.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Sign Up</title>
+  <title>Error</title>
   <link href="./css/login-pages.css" rel="stylesheet" type="text/css" />
 
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
