--- a/src/how-to/e-waste.html
+++ b/src/how-to/e-waste.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home</title>
-  <link href="/css/home-page.css" rel="stylesheet" type="text/css" />
-  <link rel="manifest" href="./manifest.json">
+  <title>E-Waste</title>
+  <link href="../css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+  <link rel="manifest" href="./manifest.json">
 </head>
 
 
@@ -21,107 +21,229 @@
       </div>
     </a>
 
-    <img src="../imgs/batteries-real.jpg">
+    <img src="../imgs/e-waste-img.jpeg" style="width: 50%; margin: 20px">
 
     <div class="title-1" style="margin-bottom: 15px;"> What to do with: E-Waste </div> <br>
 
-    <div class="regular-text" style="margin-bottom: 30px;"> All e-waste containing batteries (especially lithium
-      batteries) cannot be disposed of in a normal recycling bin! This is because electronics and fluorescent lights
-      need special disposal to handle the heavy metals and chemicals inside. They can be dropped off at special
-      locations or events, or household hazardous waste collection points across the US. Find a local one here:
+    <div class="regular-text"> Before recycling an electronic product, consider reusing it.
+      Reusing an item saves about 20 times as much energy as recycling it. Materials like rare earth metals are lost in
+      the electronics recycling process.
+    </div>
 
-      <a href="https://search.earth911.com/?what=household+hazardous+waste">
-        Household Hazardous Waste Collection Points
+    <div class="heading-1"> Consider: </div> <br>
+    <ol>
+      <li>
+        <div class="regular-text"> Giving it to a neighbor </div>
+      </li>
+
+      <li>
+        <div class="regular-text"> Donating it to a company or organization that might
+          accept them </div>
+        <ul>
+          <li>
+            <div class="regular-text">
+              Ex:
+
+              <a href="https://securethecall.org/">
+                Secure the Call
+              </a>
+
+              takes old phones as
+              911 phones for domestic violence victims.
+            </div>
+          </li>
+        </ul>
+      </li>
+
+      <li>
+        <div class="regular-text" style="margin-bottom: 30px;"> Repair minor damage to keep the product in use </div>
+      </li>
+    </ol>
+
+    <div class="regular-text"> If these options are unavailable, you can recycle the following items by simply putting
+      them BESIDE your normal blue recycling cart. Please make sure you don’t put it inside the cart, as it will be
+      destroyed.
+    </div>
+
+    <ul>
+      <li>
+        <div class="light-text" style="color: black;"> Microwaves </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> TVs up to 21’ in size </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> CPUs </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Monitors </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Keyboards </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Mice </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Speakers </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Cables </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> General PC peripherals </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Laptops </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> E-Readers </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Printers </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Fax machines </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Scanners </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Copy Machines </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Handheld devices </div>
+
+        <ul>
+          <li>
+            <div class="light-text" style="color: black;"> Phones </div>
+          </li>
+          <li>
+            <div class="light-text" style="color: black;"> Mp3 Players </div>
+          </li>
+          <li>
+            <div class="light-text" style="color: black;"> Tablets </div>
+          </li>
+          <li>
+            <div class="light-text" style="color: black;"> Calculators </div>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> DVD & Blu-Ray players </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> VCRs </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Audio Equipment </div>
+      </li>
+    </ul>
+
+    <div class="regular-text" style="margin-bottom: 30px;"> Please ensure each item is smaller than 2 feet x 2 feet x 2
+      feet and no more than 60
+      pounds. </div>
+
+    <div class="regular-text"> If your item is not within that list, residents and businesses with fewer than 50
+      employees can recycle electronics through E-Cycle Washington for free. Items that can be dropped off through this
+      program include: </div>
+
+    <ul style="margin-bottom: 30px;">
+      <li>
+        <div class="light-text" style="color: black;"> Televisions </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Computers </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Laptops </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Computer monitors </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> E-readers </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Tablets </div>
+      </li>
+      <li>
+        <div class="light-text" style="color: black;"> Portable DVD players </div>
+      </li>
+    </ul>
+
+    <div class="regular-text" style="margin-bottom: 15px;"> The collection sites for WA residents are as follows: </div>
+
+    <div class="light-text" style="color: black;"> Pacific Power Batteries of Kirkland </div>
+    <div class="light-text" style="color: black;"> 13205 NE 124th St #A, Kirkland, WA 98034 </div>
+    <div class="light-text" style="color: black; margin-bottom: 30px;"> (425) 820-3727 </div>
+
+    <div class="light-text" style="color: black;"> PC Recycle </div>
+    <div class="light-text" style="color: black;"> 5817 238th St SE, Woodinville, WA 98072 </div>
+    <div class="light-text" style="color: black; margin-bottom: 30px;"> (425) 881-4444 </div>
+
+    <div class="light-text" style="color: black;"> Goodwill Juanita </div>
+    <div class="light-text" style="color: black;"> 9826 NE 132nd St, Kirkland, WA 98034 </div>
+    <div class="light-text" style="color: black; margin-bottom: 30px;"> (425) 823-7430 </div>
+
+    <div class="regular-text" style="margin-bottom: 30px;">
+      Find more WA drop-off zones
+
+      <a href="http://1800recycle.wa.gov/">
+        here.
       </a>
 
     </div>
 
-    <div class="title-1" style="margin-bottom: 15px;"> Specifics of E-Waste </div> <br>
-
-<!-- Batteries -->
-    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Batteries </div>
-    <div class="regular-text"> Like we mentioned earlier, batteries cannot simply be tossed in the trash. Instead,
+    <div class="regular-text" style="margin-bottom: 15px;">
+      If none of these locations are accessible, Staples and Best Buy accept printers, toner cartridges, keyboards, and
+      many other small electronics for recycling free of charge.
     </div>
-    <ol class="regular-text" style="margin-bottom: 30px;">
-      <li>
-        Try to go to a local recycling center or hazardous waste collection point (linked above).
-      </li>
-      <li>
-        Try to see if your batter manufacturer (duracell, energizer, etc.) has a collection point near you! They are
-        found all throughout the US.
-      </li>
-      <li>
-        For rechargeable batteries, consider investing in a rechargeable battery charger to reduce the number of
-        disposable batteries used. Please ensure your battery charger fits your battery type.
-      </li>
-    </ol>
 
-<!-- Wires and Cables -->
-    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Wires and Cables </div>
-    <div class="regular-text"> Cables and wires are very easy to dispose of. Your options are to:
-    </div>
-    <ol class="regular-text" style="margin-bottom: 30px;">
-      <li>
-        Recycle through electronics recycling programs and e-waste recycling facilities. (linked above)
-      </li>
-      <li>
-        Reuse or repurpose the wires throughout your house
-      </li>
-      <li>
-        Take a trip to your local best buy or electronics store. They accept most non-hazardous cables
-      </li>
-    </ol>
+    <div class="regular-text" style="margin-bottom: 15px;">
+      Other options are found
 
-<!-- Devices -->
-    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Devices (smartphones,
-      tablets, etc.) </div>
-    <div class="regular-text"> There are many options when it comes to disposing of your personal devices. Before
-      anything, ensure you clear all data and log out of all accounts on your device, no matter what. From there, you
-      can
-    </div>
-    <ol class="regular-text" style="margin-bottom: 30px;">
-      <li>
-        Sell or donate the device if in working condition. Gamestop, Best buy, and Goodwill are some great places to
-        start
-      </li>
-      <li>
-        Recycle non-functional or obsolete devices through manufacturer programs or e-waste recycling centers.
-      </li>
-    </ol>
+      <a href="https://info.kingcounty.gov/Services/recycling-garbage/Solid-Waste/what-do-i-do-with/">
+        here.
+      </a>
 
-<!-- Printers and Scanners -->
-    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> Printers and Scanners </div>
-    <div class="regular-text"> Printers and Scanners may seem difficult to recycle due to their size and complexity, but
-      your options are simple!
     </div>
-    <ol class="regular-text" style="margin-bottom: 30px;">
-      <li>
-        If in working condition, try to sell or donate the device. Gamestop, Best buy, and Goodwill are some great
-        places to start
-      </li>
-      <li>
-        Otherwise, recycle non-functional devices through designated recycling centers.
-      </li>
-      <li>
-        If neither of the above are available, contact the manufacturer of the printer and see if they are accepting
-        rebates or accepting models of that printer/scanner to be sent to facilities.
-      </li>
-    </ol>
 
-<!-- TVs and Monitors -->
-    <div class="heading-1" style="margin-bottom: 15px; margin-top: 0px; font-weight: 500;"> TVs and Monitors </div>
-    <div class="regular-text"> LCD and CRT screens are different from regular devices, but the options remain similar.
-      If possible, please consider
+    <div class="regular-text" style="margin-bottom: 15px;">
+      Cell phones can alternatively be dropped off at Kirkland City Hall and Goodwill. Locations can be found at
+
+      <a href="call2recycle.org">
+        call2recycle.org.
+      </a>
+
     </div>
-    <ol class="regular-text" style="margin-bottom: 30px;">
-      <li>
-        Selling or donating the device if in working condition. Gamestop, Best buy, and Goodwill are some great places
-        to start.
-      </li>
-      <li>
-        If not in working condition, look for e-waste collection events or facilities that accept them (linked above)
-      </li>
-    </ol>
+
+    <div class="regular-text" style="margin-bottom: 15px;">
+      Recycle microwaves and other small corded mostly-metal machines can be used as scrap metals. If that interests
+      you, look at locations in
+
+      <a
+        href="https://www.kingcounty.gov/depts/dnrp/solid-waste/facilities/transfer/factoria-transfer.aspx#description">
+        Bellevue,
+      </a>
+      
+      or
+
+      <a
+        href="https://www.kingcounty.gov/depts/dnrp/solid-waste/facilities/transfer/shoreline-transfer.aspx#description">
+        Shoreline.
+      </a>
+    </div>
+
+    <div class="regular-text" style="margin-bottom: 15px;">
+      If it interests you, you can also go electronic recycling events for WA state. Reminders and dates are shown 
+
+      <a href="https://public.govdelivery.com/accounts/WAKIRK/subscriber/new?topic_id=WAKIRK_147">
+        here.
+      </a>
+
+    </div>
+
 
 </body>
 
