--- a/src/how-to/paper.html
+++ b/src/how-to/paper.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home</title>
+  <title>Paper</title>
   <link href="/css/home-page.css" rel="stylesheet" type="text/css" />
-  <link rel="manifest" href="./manifest.json">
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+  <link rel="manifest" href="./manifest.json">
 </head>
 
 
@@ -21,35 +21,51 @@
       </div>
     </a>
 
-    <div class="title-1" style="margin-bottom: 15px;"> What to do with: Paper </div> <br>
-    <div class="regular-text" style="margin-bottom: 30px;"> There are various ways to dispose of paper, and it depends on the material and volume of your item in question, as they may either be difficult for a recycling plant to process or simply take up too much space in your own bin. Below are examples of what to do depending on your item: </div>
-
-    <div class="flex-col ss-img-box">
-      <img src="../imgs/paper-real.jpg" style="height: 150px">
+    <div class="title-1" style="margin-bottom: 15px; margin-top: 15px;"> What to do with: Paper </div> <br>
+    <div class="regular-text" style="margin-bottom: 30px;"> There are various ways to dispose of paper, and it depends
+      on the material and volume of your item in question, as they may either be difficult for a recycling plant to
+      process or simply take up too much space in your own bin. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> In general, if paper is food-soiled it should be composted
+      and not recycled. If your paper is clean, then adhere to the following guidelines from the City of Kirkland:
     </div>
-    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Normal sheet paper  </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Be sure to put these in your blue recycling cart and stack them vertically to minimize space used in the bin. Examples include printer paper, shiny paper, window envelopes, and magazines. </div>
 
     <div class="flex-col ss-img-box">
-      <img src="../imgs/cardboard-real.jpg" style="height: 150px">
+      <img src="../imgs/paper-real.jpg" style="width: 45%">
+    </div>
+    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Normal sheet paper </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Be sure to put these in your blue recycling cart and stack
+      them vertically to minimize space used in the bin. Examples include printer paper, shiny paper, window envelopes,
+      and magazines. </div>
+
+    <div class="flex-col ss-img-box">
+      <img src="../imgs/cardboard-real.jpg" style="width: 35%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Cardboard </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> Cardboard boxes should be flattened out if smaller than 3’ x 3’. If larger than 3’ x 3’, it’s recommended that you cut the box up on opposing corners, as per official US recycling guidelines. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Cardboard boxes should be flattened out if smaller than 3
+      feet x 3 feet. If larger, it’s recommended that you cut the box up on opposing corners, as per official US
+      recycling guidelines. They also go in the blue bin. </div>
 
 
     <div class="flex-col ss-img-box">
-      <img src="../imgs/paperboard-real.jpg" style="height: 150px">
+      <img src="../imgs/paperboard-real.jpg" style="width: 35%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Paperboard </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> a.	Firstly, ensure that any food items (if applicable) are removed from the container and that the container doesn’t have any liquids. Once done, flatten the box if necessary and recycle. Examples include cracker boxes, cereal boxes, and dried pasta boxes. </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> Firstly, ensure that any food items (if applicable) are
+      removed from the container and that the container doesn’t have any liquids. Once done, flatten the box if
+      necessary and recycle in your blue bin. Examples include cracker boxes, cereal boxes, and dried pasta boxes.</div>
 
     <div class="flex-col ss-img-box">
-      <img src="../imgs/cartons-real.png" style="height: 150px">
+      <img src="../imgs/cartons-real.png" style="width: 35%">
     </div>
     <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Aseptic cartons </div>
-    <div class="regular-text" style="margin-bottom: 30px;"> First ensure that the boxes are empty and contain no liquids in them (i.e if it’s an ice cream container, make sure you don’t have any leftover ice cream soup in the container). Then ensure that your lid is sealed tightly, and put it in your recycling bin (Plastic lids should be screwed back on, or thrown away if loose). </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> First ensure that the boxes are empty and contain no liquids
+      in them (i.e if it’s an ice cream container, make sure you don’t have any leftover ice cream soup in the
+      container). Throw away the lid and place the carton in the recycling bin. Examples include milk cartons and
+      soup/broth boxes. </div>
 
-
+    <div class="heading-1" style="margin-bottom: 15px; font-weight: 500;"> Outside Kirkland? </div>
+    <div class="regular-text" style="margin-bottom: 30px;"> If you live in a city other than Kirkland, these guidelines
+      should still apply with very few exceptions since paper is recyclable nearly everywhere. </div>
 
 
 
