--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
 
         <a class="flex-col shadow-box semi-sq" href="./how-to/glass.html">
           <div class="flex-col ss-img-box">
-            <img src="../imgs/glass-graphic.png" alt="Glass Pane" style="height: 79px;">
+            <img src="../imgs/glass.png" alt="Glass Pane" style="height: 79px;">
           </div>
           <div class="regular-text ss-text">
             Glass
