--- a/src/how-to/glass.html
+++ b/src/how-to/glass.html
@@ -7,7 +7,7 @@
   <title>Glass</title>
   <link href="../css/home-page.css" rel="stylesheet" type="text/css" />
   <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
-  <link rel="manifest" href="./manifest.json">
+  <link rel="manifest" href="../manifest.json">
 </head>
 
 
