--- a/src/login.html
+++ b/src/login.html
@@ -27,12 +27,12 @@
     </div>
   </a>
 
-  <a class="flex-row input-box" id="facebook-btn">
+  <!-- <a class="flex-row input-box" id="facebook-btn">
     <iconify-icon icon="logos:facebook" class="input-box-icon" width="35" height="35"></iconify-icon>
     <div class="light-text" style="font-weight: 500;">
       Continue with Facebook
     </div>
-  </a>
+  </a> -->
 
 
 
@@ -42,9 +42,15 @@
     </div>
   </a>
 
+  <div class="flex-row" style="justify-content: center; margin-top: 30px">
+    <div class="light-text" style="width:80%; font-size:15px;">
+      FaceBook login is temporarily unavailable. It will be back in a few days. Sorry for the inconvenience.
+    </div>
+  </div>
 
 
-    <div class="flex-row" style="justify-content: center; margin-top: 20px">
+
+    <div class="flex-row" style="justify-content: center; margin-top: 50px">
       <div class="light-text" style="margin-left: 4px; font-size:15px;">
         By continuing you agree to our
       </div>
